--- a/app/design/frontend/Codazon/fastest/hightech2/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magefan_Blog/web/css/blog-m.css
@@ -563,3 +563,97 @@
     margin-top: 0 !important;
     padding-top: 0 !important;
 }
+.blog-page .img-responsive {
+    width: 100%;
+}
+
+/*content*/
+.mg_blog_clear_h h1, .mg_blog_clear_h h2, .mg_blog_clear_h h3, .mg_blog_clear_h h4, .mg_blog_clear_h h5, .mg_blog_clear_h h6 {
+    color: inherit !important;
+    font-size: inherit !important;
+    display: inline !important;
+    font-weight: normal !important;
+    margin: 0;
+    line-height: inherit !important;
+    font-family: 'roboto-semiBold';
+}
+.mg_blog_clear_h { color: #333; }
+.mg_blog_title_2 { font-size: 28px; line-height: 120%; font-family: "roboto-medium"; font-weight: normal; margin: 48px 0 24px 0; }
+.mg_blog_title_3 { font-size: 22px; line-height: 120%; font-family: "roboto-medium"; font-weight: normal; margin: 36px 0 24px 0; }
+.mg_blog_title_4 { font-size: 18px; line-height: 120%; font-family: "roboto-medium"; font-weight: normal; margin: 28px 0 24px 0; }
+.mg_blog_title_maintext { font-family: "roboto-regular"; font-weight: normal; font-size: 16px; line-height: 170%; margin-bottom: 24px; }
+.mg_blog_strong { font-family: "roboto-medium"; font-weight: normal; }
+.mg-blog-link { color: #333; text-decoration: underline; word-wrap: break-word; }
+.mg-blog-link:hover { color: #155DA4; }
+.mg_blog_ul { margin-bottom: 24px; }
+.mg_blog_ul ul { font-size: 16px; line-height: 170%; font-family: "roboto-regular"; font-weight: normal; list-style: inside; padding-left: 5px; }
+.mg_blog_img { margin-bottom: 24px; display: flex; flex-direction: column; align-items: center; }
+.mg_blog_img img { width: 480px; display: block; }
+.mg_blog_img .mg_blog_img_note {
+    display: block;
+    font-size: 12px;
+    line-height: 150%;
+    color: #666666;
+    font-family: "roboto-regular";
+    font-weight: normal;
+    margin-top: 12px;
+}
+.mg_blog_recommended { margin: 0 auto; width: 612px; height: auto; background: #FFFFFF; border: 10px solid #F4F4F4; display: flex; margin-bottom: 24px; }
+.mg_blog_recommended a { text-decoration: none; display: inline-block; color: inherit; }
+.mg_blog_recommended_image { padding: 10px 0 10px 10px; }
+.mg_blog_recommended_img { width: 200px; display: block; }
+.mg_blog_recommended_content { padding: 30px 30px 30px 20px; width: 100%; }
+.mg_blog_recommended_title { font-size: 16px; line-height: 150%; color: #333333; font-family: "roboto-regular"; font-weight: normal; margin-bottom: 8px; }
+.mg_blog_recommended_title a { text-overflow: ellipsis; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
+.mg_blog_recommended_price { font-size: 20px; line-height: 1.5; color: #333333; margin-bottom: 34px; font-family: "roboto-regular"; font-weight: normal; }
+.mg_blog_recommended_button_box { display: flex; }
+.mg_blog_recommended_button_box a:first-child { margin-right: 12px; }
+.mg_blog_recommended_view_more {
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #155DA4;
+    border-radius: 4px;
+    width: 160px;
+    height: 40px;
+    font-family: "roboto-regular";
+    font-weight: normal;
+    border: none;
+    cursor: pointer;
+    transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+}
+.mg_blog_recommended_view_more:hover { opacity: 0.75; }
+.mg_blog_recommended_buy_on_amazon {
+    width: 160px;
+    height: 40px;
+    background: #FFA41C;
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #333333;
+    font-family: "roboto-regular";
+    font-weight: normal;
+    border: none;
+    cursor: pointer;
+    transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+}
+.mg_blog_recommended_buy_on_amazon:hover { opacity: 0.75; }
+@media (max-width:767px) {
+    .mg_blog_img img { width: 100%; }
+    .mg_blog_recommended { flex-direction: column; width: auto; }
+    .mg_blog_recommended_image { padding: 20px; margin: auto; }
+    .mg_blog_recommended_img { width: 100%; }
+    .mg_blog_recommended_content { padding: 0 20px 20px 20px; width: auto; }
+    .mg_blog_recommended_price { margin-bottom: 20px; }
+    .mg_blog_recommended_button_box { flex-direction: column; }
+    .mg_blog_recommended_button_box a:first-child { margin-right: 0; }
+    .mg_blog_recommended_view_more { width: 100%; }
+    .mg_blog_recommended_buy_on_amazon { width: 100%; margin-top: 12px; }
+}
