--- a/app/design/frontend/Codazon/fastest/hightech3/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magefan_Blog/web/css/blog-m.css
@@ -1,10 +1,3 @@
-/**
- * Copyright © 2015 Ihor Vansach (ihor@magefan.com). All rights reserved.
- * See LICENSE.txt for license details (http://opensource.org/licenses/osl-3.0.php).
- *
- * Glory to Ukraine! Glory to the heroes!
- */
-
 .clearfix:after {
     content:"";
     display:table;
@@ -16,11 +9,14 @@
     margin-bottom: 20px;
     background: #F5F5F5;
     padding: 20px;
+    width: 100% !important;
 }
-
+.blog-page .post-list-wrapper .post-holder .post-details {
+    width: auto;
+}
 .blog-page .post-holder .post-header {position:relative;}
 
-.blog-page-list .post-holder .post-header .post-info {padding: 0 0 12px 0;}
+.blog-page-list .post-holder .post-header .post-info {padding: 8px 0 8px 0;}
 .blog-page .post-holder .post-header .post-info .item span {
     font-family: Roboto;
     font-size: 12px;
@@ -52,7 +48,7 @@
     padding: 10px 24px;
     background: #155DA4;
     border-radius: 4px;
-    margin: 24px 0px;
+    margin: 8px 0px;
     font-family: Roboto;
     font-size: 14px;
     line-height: 20px;
@@ -69,20 +65,18 @@
 .blog-category-view .category-content {padding-left: 40px;}
 .blog-page .post-content .post-description p{
     position: static;
-    width: 475px;
+    width: auto;
     font-family: Roboto;
     font-size: 14px;
     line-height: 170%;
     color: #333333;
 }
-.blog-page .post-content .post-description img {margin:0 15px 0 15px;}
+/*.blog-page .post-content .post-description img {margin:0 15px 0 15px;}*/
 .blog-page .post-content .post-description ul,
 .blog-page .post-content .post-description ol {list-style-position: inside;}
 .blog-page .post-content .post-description .post-ftimg-hld {float: left; margin: 0 15px 0 15px; width: 33%}
 .blog-page .post-content .post-description .post-ftimg-hld img {width:100%; padding:0px; margin:0px;}
-@media (max-width: 496px) {
-    .post-content .post-description .post-ftimg-hld {width: 100%; margin:0px;}
-}
+
 
 .blog-page .post-list .post-header .post-title a {
     text-decoration: none;
@@ -94,7 +88,7 @@
     margin: 0px;
     padding: 10px 0 12px 0;
     float:left;
-    width: 359px;
+    max-width: 359px;
     font-family: roboto-medium;
     font-size: 20px;
     line-height: 130%;
@@ -103,7 +97,9 @@
 
 .blog-page .post-list .post-holder .post-header .addthis_toolbox {float: right; padding-top: 20px;}
 .blog-page .post-list .hidden {display:none;}
-
+.blog-post-view .page-wrapper .columns .post-view {
+    padding-bottom: 40px;
+}
 .blog-page .post-view .post-holder {
     padding: 40px !important;
     box-shadow: none !important;
@@ -123,12 +119,8 @@
 
 .blog-page .post-view .block {margin-bottom: 30px;}
 
-.blog-page .page-main {
-    padding-top: 24px !important;
-}
 .blog-page .columns {
     margin-top: 24px;
-    margin-right: -5px !important;
 }
 .blog-page-list .wrapper-breadcrums {
     display: none;
@@ -142,6 +134,7 @@
 }
 .blog-page .columns .post-list-wrapper .post-list .post-holder .post-image {
     border-radius: 4px ;
+    max-width: 45% !important;
 }
 .blog-page .widget.block-categories ul.accordion {
     border-top: 1px solid #E1E1E1 !important;
@@ -169,12 +162,15 @@
 
 
 .blog-page .blog-search {
+    width: 100% !important;
     border-radius: 4px !important;
+    padding: 16px 16px !important;
 }
 
 .blog-page .sidebar .blog-search .block-content {
     margin-bottom: 0;
     border: none !important;
+    width: 100%;
 }
 
 .blog-page .blog-search  label {
@@ -196,7 +192,7 @@
     margin: 0;
     padding: 0;
     clear: both;
-    width: 189px;
+    width: 100%;
 }
 
 .blog-page .blog-search input {
@@ -255,7 +251,7 @@
 }
 
 .blog-page .blog-widget-recent .post-holder {
-    width: 29%;
+    max-width: 29%;
     float: left;
     margin: 5px;
 }
@@ -280,7 +276,7 @@
 
 .blog-page .pages .pages-items {
     position: static;
-    width: 184px;
+    max-width: 184px;
     height: 24px;
 }
 
@@ -312,7 +308,8 @@
 }
 
 .blog-page .post-view-title span{
-    font-family: roboto-medium;
+    font-family: Roboto;
+    font-weight: 500;
     font-size: 35px;
     line-height: 120%;
 }
@@ -339,7 +336,7 @@
 .blog-page .post-view .post-bottom .one-line {
     background-color: #155DA4;
     height: 2px;
-    width: 32px;
+    max-width: 32px;
     margin-bottom: 26px;
 }
 .blog-page .post-bottom .addthis_inline_share_toolbox a.at-icon-wrapper .at-icon-wrapper {
@@ -361,6 +358,11 @@
 .blog-post-view .at-share-tbx-element .at-share-btn {
     margin: 0 10px 0 0 !important;
 }
+.blog-page .post-list-wrapper .post-list .addthis_inline_share_toolbox {
+    clear: both;
+    position: static;
+    padding-top: 0;
+}
 .blog-page .post-list-wrapper .post-list .addthis_inline_share_toolbox a.at-icon-wrapper .at-icon-wrapper {
     height: 16px !important;
     width: 16px !important;
@@ -376,7 +378,7 @@
     border: none !important;
 }
 .newsletter-blog {
-    width: 285px;
+    width: 100%;
     background: #F4FBFF;
     margin-bottom: 20px;
     text-align: center;
@@ -400,7 +402,7 @@
 }
 .newsletter-blog .newsletter-line {
     height: 2px;
-    width: 32px;
+    max-width: 32px;
     margin-top: 12px;
     margin-bottom: 12px;
     background-color: #155DA4;
@@ -416,7 +418,7 @@
 }
 .newsletter-blog .newsletter-input {
     padding: 12px 16px;
-    width: 245px;
+    width: 100%;
     height: 40px;
     background: #FFFFFF;
     border: 1px solid #E1E1E1;
@@ -432,7 +434,7 @@
 }
 .newsletter-blog button {
     padding: 10px 24px;
-    width: 245px;
+    width: 100%;
     background: #155DA4;
     border-radius: 4px;
     margin: 0 !important;
@@ -457,22 +459,22 @@
 .top-banner{
     padding: 0;
     position: static;
-    width: 1180px;
+    width: 100%;
 }
 .top-banner .top-banner-main {
     display: flex;
-    width: 1180px;
+    width: 100%;
     height: 273px;
 }
 .top-banner-left {
-    width: 620px;
+    max-width: 444px;
     height: 273px;
     background: #F4FBFF;
-    padding: 40px 60px 60px 80px;
+    padding: 40px 40px 40px 40px;
     border-radius: 4px 0 0 0;
 }
 .top-banner .top-banner-left .top-banner-title {
-    width: 480px;
+    max-width: 480px;
     font-family: roboto-medium;
     font-size: 35px;
     line-height: 41px;
@@ -499,7 +501,7 @@
 }
 
 .top-banner-form input {
-    width: 273px;
+    max-width: 220px;
     height: 48px !important;
     background: #FFFFFF;
     border: 1px solid #E1E1E1 !important;
@@ -514,7 +516,7 @@
 
 }
 .top-banner-form button {
-    width: 135px;
+    max-width: 120px;
     height: 48px;
     background: #155DA4;
     border-radius: 4px;
@@ -542,7 +544,7 @@
 
 .top-banner-bottom {
     display: flex;
-    width: 1180px;
+    width: 100%;
     background: #FFFFFF;
     border-radius: 0 0 4px 4px;
 }
@@ -551,7 +553,6 @@
     height: 100%;
     margin-bottom: 0;
     overflow-x: auto;
-    white-space:nowrap;
 }
 .top-banner-bottom .top-banner-li {
     padding:16px 0 16px 0;
@@ -577,7 +578,9 @@
     line-height: 16px;
     color: #666666;
 }
-
+.blog-page .columns .post-list-wrapper .post-content {
+    width: 100%;
+}
 .blog-page .columns .post-list-wrapper .post-content .post-description {
     text-overflow: -o-ellipsis-lastline;
     overflow: hidden;
@@ -612,10 +615,11 @@
     line-height: 40px;
 }
 .blog-page .sidebar-additional .block-list-posts {
+    width: 100%;
     border-radius: 4px !important;
 }
 .blog-page .sidebar-additional .block-categories {
-    width: 285px;
+    width: 100%;
     border-radius: 4px !important;
 }
 .blog-page .sidebar-additional .block-title {
@@ -680,9 +684,7 @@
 .blog-page .sidebar-additional .block-content .item:last-child {
     margin-bottom: 0 !important;
 }
-.blog-page .toolbar-blog-posts {
-    margin-bottom: 0 !important;
-}
+
 .blog-page .wrapper-breadcrums .breadcrumbs ul.items {
     padding-top: 10px;
 }
@@ -691,11 +693,9 @@
     font-size: 12px;
     line-height: 14px;
 }
-
 .blog-page .img-responsive {
     width: 100%;
 }
-
 
 /*content*/
 .mg_blog_clear_h h1, .mg_blog_clear_h h2, .mg_blog_clear_h h3, .mg_blog_clear_h h4, .mg_blog_clear_h h5, .mg_blog_clear_h h6 {
@@ -728,16 +728,17 @@
     font-weight: normal;
     margin-top: 12px;
 }
-.mg_blog_recommended { margin: 0 auto; width: 612px; height: auto; background: #FFFFFF; border: 10px solid #F4F4F4; display: flex; margin-bottom: 24px; }
+.mg_blog_recommended { margin: 0 auto; max-width: 612px; height: auto; background: #FFFFFF; border: 10px solid #F4F4F4; display: flex; margin-bottom: 24px; }
 .mg_blog_recommended a { text-decoration: none; display: inline-block; color: inherit; }
 .mg_blog_recommended_image { padding: 10px 0 10px 10px; }
-.mg_blog_recommended .mg_blog_recommended_img { width: 100%; display: block; }
-.mg_blog_recommended_content { padding: 30px 30px 30px 20px; width: 100%; }
+.mg_blog_recommended_img { width: 230px; display: block; max-width: none;}
+.mg_blog_recommended_content { padding: 30px 30px 30px 20px; }
 .mg_blog_recommended_title { font-size: 16px; line-height: 150%; color: #333333; font-family: "roboto-regular"; font-weight: normal; margin-bottom: 8px; }
 .mg_blog_recommended_title a { text-overflow: ellipsis; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
 .mg_blog_recommended_price { font-size: 20px; line-height: 1.5; color: #333333; margin-bottom: 34px; font-family: "roboto-regular"; font-weight: normal; }
 .mg_blog_recommended_button_box { display: flex; }
 .mg_blog_recommended_button_box a:first-child { margin-right: 12px; }
+.mg_blog_recommended_button_box { flex-direction: column; }
 .mg_blog_recommended_view_more {
     font-size: 14px;
     line-height: 20px;
@@ -756,10 +757,7 @@
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
 }
-.mg_blog_recommended_view_more:hover {
-    background: #4F85BB;
-    color: #FFFFFF;
-    border: 1px solid #4F85BB; }
+.mg_blog_recommended_view_more:hover { opacity: 0.75; }
 .mg_blog_recommended_buy_on_amazon {
     width: 160px;
     height: 40px;
@@ -777,11 +775,7 @@
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
 }
-.mg_blog_recommended_buy_on_amazon:hover {
-    background: #FFA41C;
-    color: #333333;
-    border: none;
-}
+.mg_blog_recommended_buy_on_amazon:hover { opacity: 0.75; }
 @media (max-width:767px) {
     .mg_blog_img img { width: 100%; }
     .mg_blog_recommended { flex-direction: column; width: auto; }
@@ -795,21 +789,12 @@
     .mg_blog_recommended_buy_on_amazon { width: 100%; margin-top: 12px; }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*@media (max-width: 1023px) and (min-width: 768px) {*/
+/*    .mg_blog_recommended_view_more {*/
+/*        padding: 0;*/
+/*    }*/
+/*    .mg_blog_recommended_buy_on_amazon {*/
+/*        padding: 0;*/
+/*    }*/
+/*}*/
 
