修复绑定产品前台报错的问题，修改集合页和搜索页的样式。

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/price/final_price.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/price/final_price.phtml
@@ -55,6 +55,12 @@ $schema = ($block->getZone() == 'item_view') ? true : false;
                 line-height: 19px;
             }
         }
+        .catalog-category-view .product-item .old-price,
+        .catalogsearch-result-index .product-item .old-price,
+        .catalog-category-view .product-item .save-price-info,
+        .catalogsearch-result-index .product-item .save-price-info {
+            display: none;
+        }
     </style>
     <div class="save-price-info">
         You save $<?php echo $save_price ?> (<?php echo $save_percent ?>%)
