去掉博客集合页中内容的html。

--- a/app/design/frontend/Codazon/fastest/fashion/Magefan_Blog/templates/post/list/item.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magefan_Blog/templates/post/list/item.phtml
@@ -57,7 +57,7 @@
 
         <div class="post-content">
             <div class="post-description clearfix">
-                <?php echo $_post->getShortFilteredContent() ?>
+                <?php echo strip_tags($_post->getShortFilteredContent()) ?>
             </div>
 			<a class="post-read-more" href="<?php echo $_postUrl ?>" title="<?php echo $_postName ?>"
 			   >
