--- a/app/design/frontend/Codazon/fastest/hightech3/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magefan_Blog/web/css/blog-m.css
@@ -730,8 +730,12 @@
 }
 .mg_blog_recommended { margin: 0 auto; max-width: 612px; height: auto; background: #FFFFFF; border: 10px solid #F4F4F4; display: flex; margin-bottom: 24px; }
 .mg_blog_recommended a { text-decoration: none; display: inline-block; color: inherit; }
-.mg_blog_recommended_image { padding: 10px 0 10px 10px; }
-.mg_blog_recommended_img { width: 230px; display: block; max-width: none;}
+.mg_blog_recommended_image {
+    padding: 10px 0 10px 10px;
+    display: flex;
+    align-items: center;
+}
+.mg_blog_recommended_img { width: 100%; display: block; max-width: none;}
 .mg_blog_recommended_content { padding: 30px 30px 30px 20px; }
 .mg_blog_recommended_title { font-size: 16px; line-height: 150%; color: #333333; font-family: "roboto-regular"; font-weight: normal; margin-bottom: 8px; }
 .mg_blog_recommended_title a { text-overflow: ellipsis; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
@@ -788,13 +792,4 @@
     .mg_blog_recommended_view_more { width: 100%; }
     .mg_blog_recommended_buy_on_amazon { width: 100%; margin-top: 12px; }
 }
-
-/*@media (max-width: 1023px) and (min-width: 768px) {*/
-/*    .mg_blog_recommended_view_more {*/
-/*        padding: 0;*/
-/*    }*/
-/*    .mg_blog_recommended_buy_on_amazon {*/
-/*        padding: 0;*/
-/*    }*/
-/*}*/
 
