--- a/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
@@ -735,7 +735,7 @@
     display: flex;
     align-items: center;
 }
-.mg_blog_recommended .mg_blog_recommended_img { width: 100%; display: block;margin: 0 !important; }
+.mg_blog_recommended .mg_blog_recommended_img { width: 100%; display: block;margin: 0 !important;min-width: 200px; }
 .mg_blog_recommended_content { padding: 30px 30px 30px 20px; width: 100%; }
 .mg_blog_recommended_title { font-size: 16px; line-height: 150%; color: #333333; font-family: "roboto-regular"; font-weight: normal; margin-bottom: 8px; }
 .mg_blog_recommended_title a { text-overflow: ellipsis; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
