--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
@@ -711,6 +711,15 @@
             }
         }
     }
+    .related, .crosssell {
+        .products-grid {
+            .product-item .product-item-info {
+                .product-item-details {
+                    min-height: unset;
+                }
+            }
+        }
+    }
 }
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
 	.product-style05{
