--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
@@ -66,6 +66,7 @@
 		display:inline-block;
 
 		.abs-cssall(#cccccc, #cccccc, #ffffff);
+        border-radius: 4px;
 		&:hover{
 			.abs-cssall(@btn_default_text, @btn_default_border, @btn_default_background);
 		}
