--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1679,15 +1679,36 @@
     font-family: 'roboto-medium';
 
 }
-strong#block-related-heading:before {
-    width: 37%;
-    left: 13px;
-    content: " ";
-    background: #155da4;
-    position: absolute;
-    bottom: 0;
-    height: 2px;
+.related .title{
+    background: #ffffff !important;
+    padding: 20px 0 0 16px !important;
+    font-style: normal !important;
+    font-weight: normal !important;
+    font-size: 16px  !important;
+    line-height: 19px !important;
+    color: #333333 !important;
+    border-bottom: 1px solid #e1e1e1;
+    font-family: 'roboto-medium' !important;
+    #block-related-heading {
+        padding-bottom: 10px;
+        border-bottom: 2px solid #155DA4;
+    }
 }
+.crosssell .title{
+     background: #ffffff !important;
+     padding: 20px 0 0 20px !important;
+     font-style: normal !important;
+     font-weight: normal !important;
+     font-size: 16px  !important;
+     line-height: 19px !important;
+     color: #333333 !important;
+     border-bottom: 1px solid #e1e1e1;
+     font-family: 'roboto-medium' !important;
+     #block-crosssell-heading {
+         padding-bottom: 10px;
+         border-bottom: 2px solid #155DA4;
+     }
+ }
 .product.data.items>.item.title:not(.disabled)>.switch:active, .product.data.items>.item.title.active>.switch, .product.data.items>.item.title.active>.switch:focus, .product.data.items>.item.title.active>.switch:hover{
     font-style: normal;
     font-weight: normal;
