--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
@@ -29,6 +29,7 @@
                 content: '\e925';
                 font-size: 16px;
                 color: #E1E1E1;
+                vertical-align: text-top;
             }
         }
         &.block {
@@ -221,7 +222,6 @@
 					min-width: 15px;
 					text-align: center;
                     position: relative;
-                    top: 3px;
                     &:before {
                         //content: '(';
                     }
@@ -320,8 +320,8 @@
                 strong {
                     .lib-css(box-shadow, none);
                     left: auto;
-                    right: 20px;
-                    top: 6px !important;
+                    right: 10px;
+                    top: 10px !important;
 					font-size:0 !important;
 					.abs-cssall(@btn_primary_text, @btn_primary_border, @btn_primary_background);
 					&:hover{
