--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -856,7 +856,7 @@
     line-height: 1.3;
     color: #333333;
     font-weight: 500;
-    font-family: 'Roboto-Medium', sans-serif;
+    font-family: 'roboto-medium', sans-serif;
     padding: 20px 0;
 }
 
@@ -889,7 +889,7 @@
     font-size: 14px;
     color: #333333;
     line-height: 1.5;
-    font-family: 'Roboto-Medium', sans-serif;
+    font-family: 'roboto-medium', sans-serif;
 }
 
 .mg-product-block-QA-question .mg-product-block-QA-icon {
