--- a/app/design/frontend/Codazon/fastest/fashion/web/mage/gallery/gallery.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/mage/gallery/gallery.less
@@ -237,7 +237,8 @@
     &:extend(.fotorama-print-background);
     backface-visibility: hidden;
     background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.25), rgba(64, 64, 64, 0.1));
-    border: 1px solid @active__color;
+    border: 1px solid #155DA4;
+    border-radius: 4px;
     left: 0;
     position: absolute;
     top: 0;
