--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1490,11 +1490,16 @@
     background: #FFFFFF;
     border: 1px solid #155DA4;
     border-radius: 4px;
+    transition: border 0.01s;
     &:hover{
-        .abs-style(#4F85BB, #4F85BB, #ffffff);
+        color: #4f85bb;
+        background: #fff;
+        border: 2px solid #4f85bb;
     }
     &:active{
-        .abs-style(#10477D, #10477D, #ffffff);
+        color: #10477D;
+        background: #fff;
+        border: 2px solid #10477D;
     }
 }
 .action.primary:hover {
@@ -1610,7 +1615,7 @@
 }
 .related .title{
     background: #ffffff !important;
-    padding: 20px 0 12px 20px !important;
+    padding: 20px 0 0 20px !important;
     font-style: normal !important;
     font-weight: normal !important;
     font-size: 16px  !important;
@@ -1618,18 +1623,13 @@
     color: #333333 !important;
     border-bottom: 1px solid #e1e1e1;
     font-family: 'roboto-medium' !important;
+    #block-related-heading {
+        padding-bottom: 10px;
+        border-bottom: 2px solid #155DA4;
+    }
 }
 .owl-carousel .owl-stage-outer {
     height: inherit;
-}
-strong#block-related-heading:before {
-    content: " ";
-    width: 12%;
-    background: #155da4;
-    position: absolute;
-    bottom: 0;
-    left: 15px;
-    height: 2px;
 }
 .block.crosssell .owl-carousel, .block.upsell .owl-carousel, .block.related .owl-carousel{
     padding-top: 0;
@@ -1674,7 +1674,7 @@ strong#block-related-heading:before {
 }
 .crosssell .title{
     background: #ffffff !important;
-    padding: 20px 0 12px 20px !important;
+    padding: 20px 0 0 20px !important;
     font-style: normal !important;
     font-weight: normal !important;
     font-size: 16px  !important;
@@ -1682,15 +1682,10 @@ strong#block-related-heading:before {
     color: #333333 !important;
     border-bottom: 1px solid #e1e1e1;
     font-family: 'roboto-medium' !important;
-}
-strong#block-crosssell-heading:before {
-    content: " ";
-    width: 12%;
-    background: #155da4;
-    position: absolute;
-    bottom: 0;
-    left: 15px;
-    height: 2px;
+    #block-crosssell-heading {
+        padding-bottom: 10px;
+        border-bottom: 2px solid #155DA4;
+    }
 }
 .crosssell .related-upsell-crossell.block-content.content{
     border: 0;
