--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_layout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_layout.less
@@ -140,7 +140,7 @@
                 border-radius: 4px 4px 0 0 !important;
             }
             .filter-content {
-                border: none;
+                border: none !important;
                 border-radius: 0 0 4px 4px !important;
             }
             .block-brands {
@@ -149,7 +149,7 @@
                     border-radius: 4px 4px 0 0 !important;
                 }
                 .block-content {
-                    border: none;
+                    border: none !important;
                     border-radius: 0 0 4px 4px !important;
                 }
             }
@@ -166,7 +166,7 @@
                     border-radius: 4px 4px 0 0 !important;
                 }
                 .block-content {
-                    border: none;
+                    border: none !important;
                     border-radius: 0 0 4px 4px !important;
                 }
             }
