--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -1729,3 +1729,29 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		background:lighten(@main_hover_text, 20%);
 	}
 }
+
+@media(max-width: 428px) {
+    .our-brands .brand-item {
+        margin-bottom: 22px !important;
+    }
+}
+@media(max-width: 414px) {
+    .our-brands .brand-item {
+        margin-bottom: 18px !important;
+    }
+}
+@media(max-width: 375px) {
+    .our-brands .brand-item {
+        margin-bottom: 8px !important;
+    }
+}
+@media(max-width: 360px) {
+    .our-brands .brand-item {
+        margin-bottom: 2px !important;
+    }
+}
+@media(max-width: 320px) {
+    .our-brands .brand-item {
+        margin-bottom: -12px !important;
+    }
+}
