--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
@@ -58,6 +58,7 @@
 
     <referenceBlock name="catalog.compare.sidebar" remove="true" />
     <referenceBlock name="wishlist_sidebar" remove="true" />
+    <referenceBlock name="reviews.tab" remove="true" />
 
     <referenceBlock name="product.info.details">
         <block class="Magento\Catalog\Block\Product\View\Description" name="faq" template="Magento_Catalog::product/view/faq.phtml" group="detailed_info">
