博客分页按钮hover样式修改

--- a/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
@@ -42,6 +42,10 @@
 .blog-page .pages .pages-items li.item {
     margin: 0px 4px 0px 4px !important;
 }
+.blog-page .pages .pages-items li.item a:hover {
+    color: #ffffff !important;
+    font-family: "roboto-medium";
+}
 .blog-page .post-list {
     margin-top: 20px;
     margin-bottom: 20px;
