--- a/app/code/Ecopure/Catalog/view/frontend/templates/coupon.phtml
+++ b/app/code/Ecopure/Catalog/view/frontend/templates/coupon.phtml
@@ -173,6 +173,7 @@
 <script>
     require(['jquery'],function($){
         $('[data-block="minicart"]').on('contentLoading', function (event) {
+            fbq('track', 'AddToCart');
             setTimeout(function() {
                 $('html, body').animate({scrollTop:0}, 'slow');
             }, 2000);
