--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Search/templates/form.mini.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Search/templates/form.mini.phtml
@@ -23,7 +23,7 @@
             "triggerClass":"active",
             "parentClass":"active",
             "buttons":null}}'*/ ?> >
-			<form class="form minisearch" id="search_mini_form" action="<?php /* @escapeNotVerified */ echo $helper->getResultUrl() ?>" method="get">
+			<form class="form minisearch" id="search_mini_form" action="<?php /* @escapeNotVerified */ echo $helper->getResultUrl() ?>" method="get" onsubmit="fbq('track', 'Search');">
 				<div class="field search">
 					<label class="label" for="search" data-role="minisearch-label">
 						<span><?php /* @escapeNotVerified */ echo __('Search'); ?></span>
